I got excited and put up a splash page

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@ layout: default
 title: workwithfitzto
 bodyClass: home
 ---
-
-workwith.fitz.to
+<img src="images/logo_0.png" width="456" height="516" alt="Fitz" class="logo" />
+<p>
+    workwith.fitz.to</br>
+    <a href="http://twitter.com/fitzhuge" target="_blank">@fitzhuge</a>
+</p>
