made some minor changes to config and the title in gh-pages and merged it back in

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: workwithfitzto
+title: workwith.fitz.to
 bodyClass: home
 ---
 <img src="images/logo_0.png" width="456" height="516" alt="Fitz" class="logo" />
