started playing around with pattern gradient backgrounds

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: workwith.fitz.to
 bodyClass: home
 ---
-<img src="images/logo_0.png" width="456" height="516" alt="Fitz" class="logo" />
+<!-- <img src="images/logo_0.png" width="456" height="516" alt="Fitz" class="logo" /> -->
 <p>
     workwith.fitz.to</br>
     <a href="http://twitter.com/fitzhuge" target="_blank">@fitzhuge</a>
