adjusted home page content, and did some more gradient work, also put a little work into mobile layout

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-title: workwith.fitz.to
+title:
 bodyClass: home
 ---
-<!-- <img src="images/logo_0.png" width="456" height="516" alt="Fitz" class="logo" /> -->
-<p>
-    workwith.fitz.to</br>
-    <a href="http://twitter.com/fitzhuge" target="_blank">@fitzhuge</a>
-</p>
+<img src="images/logo_0.png" width="456" height="561" alt="Fitz" class="logo" />
+<div class="desc">
+    <h1>fitz ryland</h1>
+    <h2>freelance web designer</h2>
+    <h3>workwith.fitz.to</h3>
+</div>
