added projects own category/post type. also inserted content

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ bodyClass: home
 <div class="desc">
     <h1>fitz ryland</h1>
     <h2>freelance web designer</h2>
-    <h3>workwith.fitz.to</h3>
+    <p>Shoot me an email, and let's get to work.</p>
+    <p><a href="mailto:fitz@fitz.to">fitz@fitz.to</a></p>
 </div>
