firmed up a bit of styling of portfolio

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@ layout: default
 title:
 bodyClass: home
 ---
-<img src="images/logo_0.png" width="456" height="561" alt="Fitz" class="logo" />
-<div class="desc">
-    <h1>fitz ryland</h1>
-    <h2>freelance web designer</h2>
-    <p>Shoot me an email, and let's get to work.</p>
-    <p><a href="mailto:fitz@fitz.to">fitz@fitz.to</a></p>
+<h1>Fitz Ryland</h1>
+<h2>Freelance Web Designer</h2>
+<p>Shoot me an email, and let's get to work. Here is another sentence or two. This is just placeholder text. and here is one more sentence. OK, OK, just one more sentence (I really need it).</p>
+<div class="buttonWrap">
+    <a href="mailto:hire@fitz.to" class="button">Contact</a>
 </div>
