--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@ bodyClass: home
 <h2>Freelance Web Designer</h2>
 <h3>http://workwith.fitz.to/...</h3>
 
-<p>Shoot me an email, and let's get to work. Here is another sentence or two. This is just placeholder text. and here is one more sentence. OK, OK, just one more sentence (I really need it).</p>
+<p>I would love to hear about the project that you are excited about. Helping others achieve their goals is my passion.</p>
 <div class="buttonWrap">
     <a href="mailto:hire@fitz.to" class="button">Contact</a>
 </div>
+<!--
+You are a passionate goal oriented client ready to get to work.
+
+Work with Fitz to build a website that achieves your busness goals.
+
+
+
+
+-->
