--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ bodyClass: home
 <h2>Freelance Web Designer</h2>
 <h3>http://workwith.fitz.to/...</h3>
 
-<p>I would love to hear about the project that you are excited about. Helping others achieve their goals is my passion.</p>
+<p>Building beautiful websites to help others achieve their goals is my passion. I currently have availability for new projects, so let's get in touch and get to work.</p>
 <div class="buttonWrap">
     <a href="mailto:hire@fitz.to" class="button">Contact</a>
 </div>
