A few more content edits, and actually included the correct logo img.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@ bodyClass: home
 <h2>Freelance Web Designer</h2>
 <h3>http://workwith.fitz.to/...</h3>
 
-<p>Building beautiful websites to help others achieve their goals is my passion. I currently have availability for new projects, so let's get in touch and get to work.</p>
+<p>Building beautiful websites to help businesses achieve their goals is my passion. I currently have availability for new projects, so let's get in touch and get to work.</p>
 <div class="buttonWrap">
     <a href="mailto:hire@fitz.to" class="button">Contact</a>
 </div>
-<!--
-You are a passionate goal oriented client ready to get to work.
-
-Work with Fitz to build a website that achieves your busness goals.
-
-
-
-
--->
