updated email address, updated button style

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ bodyClass: home
 
 <p>Building beautiful websites to help businesses achieve their goals is my passion. I currently have availability for new projects, so let's get in touch and get to work.</p>
 <div class="buttonWrap">
-    <a href="mailto:hire@fitz.to" class="button">Contact</a>
+    <a href="mailto:workwith@fitz.to" class="button">Contact</a>
 </div>
