first draft of copy after todd's input, added text selection highlight color

--- a/index.html
+++ b/index.html
@@ -6,8 +6,29 @@ bodyClass: home
 <h1>Fitz Ryland</h1>
 <h2>Freelance Web Designer</h2>
 <h3>http://workwith.fitz.to/</h3>
+<p>Businesses hire me to build functional and beautiful websites. Making user interfaces to help businesses succeed is my passion. I currently have availability for new projects, so let's talk and get to work.</p>
 
-<p>Building beautiful websites to help businesses achieve their goals is my passion. I currently have availability for new projects, so let's get in touch and get to work.</p>
 <div class="buttonWrap">
     <a href="mailto:workwith@fitz.to" class="button">Contact</a>
 </div>
+
+<!-- <p>Building beautifully functional websites and user interfaces to help businesses succeed is my passion. I currently have availability for new projects, so let's talk and get to work.</p> -->
+<!--
+"You build beautiful websites and user experiences that just make sense." - Todd
+
+- position self towards businesses
+
+I make user interfaces to help businesses succeed; It is my passion.
+
+Building user interfaces to help businesses succeed is my passion.
+
+<p>Building beautifully functional websites and user interfaces to help businesses succeed is my passion. I currently have availability for new projects, so let's talk and get to work.</p>
+
+making user interfaces to help businesses succeed is my passion.
+
+ I make user interfaces to help businesses succeed
+
+- functional
+- beautiful
+
+ -->
