william's content edits

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ bodyClass: home
 <h1>Fitz Ryland</h1>
 <h2>Freelance Web Designer</h2>
 <h3>http://workwith.fitz.to/</h3>
-<p>Businesses hire me to build functional and beautiful websites. Making user interfaces to help businesses succeed is my passion. I currently have availability for new projects, so let's talk and get to work.</p>
+<p>I build websites for businesses that value function and beauty. Designing and creating user interfaces that help businesses succeed is my passion. I currently have limited availability for new projects, so let's talk now and get to work.</p>
 <div class="buttonWrap">
     <a href="mailto:workwith@fitz.to" class="button">Contact</a>
 </div>
